Fix title typo in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     
     <!-- ========== SEO OPTIMIZADO PARA EPICGOLDSHOP.COM ========== -->
-    <title>Epic Gold Shop | Comprar Oro WoW - Vender Oro WoW - Cuentas Premium</title>
+    <title>Epic Gold Shops | Comprar Oro WoW - Vender Oro WoW - Cuentas Premium</title>
     <meta name="description" content="Tienda #1 para comprar oro World of Warcraft, Turtle WoW, Albion Online. Vende tu oro seguro, entrega inmediata 24/7. Cuentas verificadas, precios competitivos.">
     <meta name="keywords" content="comprar oro wow, vender oro wow, oro world of warcraft, turtle wow gold, albion online silver, cuentas wow, wow classic gold, dragonflight gold">
     <meta name="author" content="Epic Gold Shop">
